2009-07-02  Miklos Szeredi <miklos@szeredi.hu>

	* The context is extended with a 'umask' field.  The umask is sent
	for mknod, mkdir and create requests by linux kernel version
	2.6.31 or later, otherwise the umask is set to zero.  Also
	introduce a new feature flag: FUSE_CAP_DONT_MASK.  If the kernel
	supports this feature, then this flag will be set in conn->capable
	in the ->init() method.  If the filesystem sets this flag in in
	conn->want, then the create modes will not be masked.

	* Add low level interfaces for lookup cache and attribute
	invalidation.  This feature is available in linux kernels 2.6.31
	or later.  Patch by John Muir

	* Kernel interface version is now 7.12

	* fusermount: Do not silently ignore command line arguments.
	Patch by Sebastian Harl

2009-06-19  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.0-pre3

2009-06-19  Miklos Szeredi <miklos@szeredi.hu>

	* Add fuse_getgroups (high level lib) and fuse_req_getgroups (low
	level lib) functions to query the supplementary group IDs for the
	current request.  Currently this is implemented on Linux by
	reading from the /proc filesystem.

2009-06-18  Miklos Szeredi <miklos@szeredi.hu>

	* Add "noforget" option to high level lib to prevent ESTALE errors
	on NFS exported filesystems.  This result in paths being cached
	forever, resulting in ever growing memory usage.  Use with care.

	* Add "no_remote_lock" option to disable remote file locking even
	if the filesystem implements it.  With this option locking
	primitives (flock, lockf, fcntl(F_SETLK)) will still work, but
	will ignore remotely locked files.

	* CUSE patches from Tejun Heo:

	* Unrestricted ioctl support left some debris.  Clean them up:
	  o No reason to pass around pointer to flags.  Pass flags directly.
	  o Clean up comment and prototype parameter names.
	  o fuse_lib_ioctl() didn't reply when get_path() failed.  Fix it.
	  o Remove unused variables {in|out}_iov from fuse_lib_ioctl().

	* Add fuse_reply_ioctl_iov()
