@@ -1,3 +1,9 @@
+2009-07-16  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Clarify how the protocol version should be negotiated between
+	kernel and userspace.  Notably libfuse didn't correctly handle the
+	case when the supported major versions didn't match
+
 2009-07-02  Miklos Szeredi <miklos@szeredi.hu>
 
 	* The context is extended with a 'umask' field.  The umask is sent
